apps/happin-web/styles/public.scss
@import 'mixin';
// 凡是大标题都用这个class，字体粗细有:
// 500: font-medium
// 600: font-semibold
// 700: font-bold
// 800: font-extrabold
.black-title {
  font-family: proximanova, 'Helvetica Neue', 'PingFang SC', Arial, sans-serif;
}

// 页面基础包裹容器
.container {
  padding-right: 1.25rem;
  padding-left: 1.25rem;
  @media (min-width: 640px) {
    padding-right: 1.5rem;
    padding-left: 1.5rem;
  }
  @media (min-width: 768px) {
    padding-right: 2rem;
    padding-left: 2rem;
  }
  @media (min-width: 1280px) {
    width: 100%;
    max-width: 1280px;
    margin-right: auto;
    margin-left: auto;
  }
}

// Layout
.main-app {
  @apply flex flex-col h-screen;
  &.production {
    @apply h-auto
  }
  &.reward-page {
    background-color: #ffb15d;
  }
  &.app-reward-page {
    @apply bg-gray-900
  }
}
.header {
  .production &{
    @apply sticky top-0 z-10;
  }
}
.common__body {
  @apply relative flex-1 h-0 text-white overflow-x-hidden z-0;
}

.link-blue {
  @apply text-blue-500 hover:text-blue-600 hover:underline transition;
}
.link-rose {
  @apply text-rose-500 hover:text-rose-600 hover:underline transition;
}
.link-white {
  @apply text-white underline hover:text-rose-500 transition;
}
.link-gray {
  @apply text-gray-400 hover:text-rose-500 transition;
}
.link-normal {
  @apply hover:underline hover:text-rose-500 transition;
}

.ellipsis-2 {
  @include ellipsis(2)
}
.ellipsis-3 {
  @include ellipsis(3)
}
.web-scroll {
  @media (min-width: 640px) {
    @include dark-scroll
  }
}
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}
.border-3 {
  border-width: 3px;
}

.divider-words {
  @apply relative font-semibold leading-none text-center my-5 text-sm sm:text-base;
  &:before, &:after {
    content: '';
    position: absolute;
    top: 50%;
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    transform: translateY(-50%);
  }
  &:before {
    right: 55%;
    left: 0;
  }
  &:after {
    right: 0;
    left: 55%;
  }
}

@keyframes fade-scale {
  0% {
    transform: scale(.9);
    transform-origin: right top;
    opacity: 0;
  }
  100% {
    transform: scale(1);
    transform-origin: right top;
    opacity: 1;
  }
}
@keyframes fade-background {
  0% {
    background-color: rgba(0,0,0,0);
  }
  100% {
    background-color: rgba(0,0,0,.7);
  }
}
@keyframes fade-in-up {
  0% {
    transform: translateY(30px);
    opacity: .75;
  }
  100% {
    transform: translateY(0);
    opacity: 1;
  }
}
.fade-scale-in {
  animation-duration: .3s;
  animation-fill-mode: both;
  animation-name: fade-scale;
  animation-timing-function: ease-out;
}
.fade-background {
  animation-duration: .1s;
  animation-fill-mode: both;
  animation-name: fade-background;
}
.fade-in-up {
  animation-duration: .1s;
  animation-fill-mode: both;
  animation-name: fade-in-up;
}
@supports (bottom: env(safe-area-inset-bottom)){
  .footer-action {
    padding-bottom: constant(safe-area-inset-bottom);
    padding-bottom: env(safe-area-inset-bottom);
  }
}

.markdown-article {
  @apply text-gray-700 text-base;
  h1, h2, h3, h4, h5, h6 {
    @apply text-gray-900;
    line-height: 140%;
  }
  p {
    @apply text-gray-700;
  }
  p {
    @apply mb-4;
  }
  ul {
    @apply list-disc;
  }
  ol, ul {
    @apply px-6 my-4 mx-auto;
    li {
      @apply my-2;
    }
  }
  h1 {
    @apply font-semibold text-2xl my-5;
  }
  h2 {
    @apply font-semibold text-xl my-5;
  }
  h3 {
    @apply font-semibold text-lg my-4;
  }
  h4 {
    @apply font-semibold text-base my-4;
  }
  h5 {
    @apply font-medium text-base my-4;
  }
  h6 {
    @apply font-medium text-sm my-4;
  }

  a {
    @apply no-underline border-b border-solid border-rose-500 text-gray-700;
    transition: border .2s;
    &:hover {
      @apply border-b-2;
    }
  }

  table {
    @apply mx-auto mb-4 border-collapse border border-solid border-gray-200;
  }

  table tr {
    @apply bg-white;
  }

  table tr:hover>td {
    @apply bg-gray-100 bg-clip-padding;
  }

  table td, table th {
    @apply border-b border-r border-solid border-gray-200 align-middle m-0 py-2 px-4 overflow-ellipsis box-border;
    transition: background-color .25s ease;
  }

  table th {
    @apply bg-gray-50
  }

  figure {
    @apply relative text-center my-6 mx-auto max-w-full outline-none;
    img {
      @apply max-w-full;
    }
  }
  figcaption {
    @apply text-gray-600 text-sm text-center mt-4;
  }
  blockquote {
    @apply relative block my-6 mx-auto border-l-2 border-solid border-rose-500 text-gray-500 font-medium px-3;
  }
  &.markdown-dark-theme {
    @apply text-gray-300;
    h1, h2, h3, h4, h5, h6 {
      @apply text-gray-50;
    }
    p {
      @apply text-gray-300;
    }
    a {
      @apply text-gray-300;
    }
    table {
      @apply border-gray-700;
    }
    table tr,
    table tr:hover>td {
      @apply bg-white bg-opacity-5;
    }
    table td, table th {
      @apply border-gray-700;
    }
    table th {
      @apply bg-gray-900;
    }
    figcaption {
      @apply text-gray-300;
    }
    blockquote {
      @apply text-gray-400;
    }
  }
}

.text-15 {
  font-size: 15px;
  line-height: 1.3rem;
}

